fix remote author

--- a/guspy/http/VIEWS/index_joran.html
+++ b/guspy/http/VIEWS/index_joran.html
@@ -1,5 +1,5 @@
-<h2>CS 383 Python Gus Developement Team</h2>
-
+<h2>CS 383 Python Gus Developement Team</h2> 
+Current Revision :<b>{{ revision }}</b> <br>
 <p>Gus is intended to be a Group Management tool specifically aimed at the University environment.</p>
 
 <div style="width:800px">
