--- a/guspy/http/VIEWS/gus_groups/user_profile.html
+++ b/guspy/http/VIEWS/gus_groups/user_profile.html
@@ -1,9 +1,15 @@
-<head>
-<title>User Profile {{ user }}</title>
-</head>
-
-{{ user.user.first_name }} {{ user.user.last_name  }}&lt;{{ user.user.email }}&gt;
-
-<br>
-<a href="/gus/create_group/">Create A New Group</a> <br><a href="/gus/join_group/">Join an existing Group</a>
-
+{% extends "base.html" %}
+{% block title %}User Profile {{ user }}{% endblock %}
+{% block site_content %}
+<div>{{ user.user.first_name }} {{ user.user.last_name  }}&lt;{{ user.user.email }}&gt;</div>
+<div class="left header medium" style="margin-right:20px;">My Groups</div>
+<div class="vspace_small hpad_small">
+<a href="{% url gus_groups.views.create_group %}">Create A New Group</a> | <a href="/gus/join_group/">Join an existing Group</a>
+</div>
+<hr>
+<table>
+{% for group in  groups %}
+<tr><td><a href="">{{ group.gid }}</a></td><td>{{group.role_name}}</td></tr>
+{% endfor %}
+</table>
+{% endblock %}
