--- a/guspy/http/VIEWS/gus_talk/home.html
+++ b/guspy/http/VIEWS/gus_talk/home.html
@@ -7,6 +7,7 @@
 }
 </style>
 <!-- Forums  -->
+
 <div id="list">
 <table border="0" cellpadding="4" width="100%">
     <tr>
@@ -18,16 +19,16 @@
     {% for forum in forums %}
     <tr {% if forloop.counter|divisibleby:2 %}class="even_row"{% endif %}>
         <td {% if forloop.last %}class="last"{% endif %}>
-        <div class="title"> <a href="{#% url gus_talk.views.forum forum.pk %#}">{{ forum.title }}</a>
+        <div class="title"> <a href="{% url gus_talk.views.forum forum.pk %}">{{ forum.title }}</a>
             </div></td>
         <td {% if forloop.last %}class="last"{% endif %}>{{ forum.num_posts }}</td>
         <td {% if forloop.last %}class="last"{% endif %}>
             {{ forum.last_post.short|linebreaksbr }}</td>
         <td {% if forloop.last %}class="last"{% endif %}>
-            <a class="button" href="{#% url forum.views.forum forum.pk %#}">VIEW</a>
+            <a class="button" href="{% url gus_talk.views.forum forum.pk 
+%}">VIEW</a>
         </td>
     </tr>
-
     {% endfor %}
 </div>
 
