--- a/php/http/css_template_progress/template.css
+++ b/php/http/css_template_progress/template.css
@@ -1,5 +1,5 @@
 body {
-	background-image:url('logo.png');
+	background-image:url('star_background.png');
 	background-color:white;
 	background-repeat:no-repeat;
 	background-attachment:fixed;
@@ -19,10 +19,10 @@ body {
 }
 
 #header_element{
-	background-color: #FFF49D;
 	background-image:url('gus_logo.jpg');
 	background-position: left top;
 	background-repeat: no-repeat;
+	text-align:right;
 	font-size: 14pt;
 	height: 168px;	
 	padding-left:255px;
@@ -36,28 +36,54 @@ body {
 	width: 100%;
 	float: center;
 	clear: both;
-	text-align: center;	
-	background: #9cff2b; 
-	height: 50px;
+	text-align: center;
+	vertical-align:text-top; 
+	padding-bottom: 20px;
+	border-top:2px dashed #f6ba2f;
+	padding-top: 2px
+	/*Shamelessly ninjaed from http://www.tankedup-imaging.com/css_dev/css-gradient.html*/
+	/*Fall Back Option*/
+	background: white;
+	/* gecko based browsers */	
+	background: -moz-linear-gradient(top, #fffeed, #fff9ca);
+	/* webkit based browsers */
+	background: -webkit-gradient(linear, left top, left bottom, from(#fffeed), to(#fff9ca));
+	height: auto;
+}
+
+#spreader{
+	width: 100%;
+	float: center;
+	clear: both;
+	height: 20px;
 }
 
 #content{	
  	float: right; 
-	width:	80%;  
-	border-left: 1px solid black;
-	border-top: 1px solid black;
+	width:	78%;  
+	border-top: 2px dashed #f6ba2f;
 	padding: 10px;
-	background: #9cff7b; 
+	background-image:url('content_background.png'); 
 }
 
 #group_column{
-	float: left; 
+	float: left top; 
 	width: 18%;
-	background: #FFF49D;
-	border-top: 1px solid black;
+	border-top: 2px dashed #f6ba2f;
 	text-align: center;
 	font-family: "Times New Roman";
 	font-size: 14pt;
+	padding-bottom: 10px;
+	background: #fff9ca;
+	
+	/*Shamelessly ninjaed from http://www.tankedup-imaging.com/css_dev/css-gradient.html*/
+	/* gecko based browsers */
+	background: -moz-linear-gradient(top, #fffeed, #fff495);
+
+	/* webkit based browsers */
+	background: -webkit-gradient(linear, left top, left bottom, from(#fffeed), to(#fff495));
+	height: auto;
+
 }
 
 #footer{
@@ -65,6 +91,11 @@ body {
 	clear: both;
 	float: center;
 	text-align: center;
-	padding-bottom: 30px;
+	height: 30px;
+	font-size: 9px;
+	font-color: #666;
+	background-color:#f5f5f0;
+	padding-top: 2px;
+	border-top: 1px dashed #bcbcbc;
 }
 
