--- a/php/http/css_template_progress/template.css
+++ b/php/http/css_template_progress/template.css
@@ -1,15 +1,32 @@
-body {
-	background-image:url('star_background.png');
-	background-color:white;
-	background-repeat:no-repeat;
-	background-attachment:fixed;
-	background-position:right bottom;
+html {
+	/* gecko based browsers */
+	background: -moz-linear-gradient(top, #fffeed, #b18e5f);
+
+	/*fff495*/	
+
+	/* webkit based browsers */
+	background: -webkit-gradient(linear, left top, left bottom, from(#fffeed), to(#b18e5f));
+	height: auto;
+}
+
+
+body{
+	width: 1120px;
+	margin: auto;
+	background: #436188;
+
+}
+
+#container{
 	width: 1024px;
 	margin: auto;
 	padding: 2px;
 	font-family: "Arial";
 	font-size: 11pt;
+	height: 100%;
+	background-image:url('content_background.png'); 
 }
+
 
 .groups{
 	text-align: left;
@@ -19,12 +36,12 @@ body {
 }
 
 #header_element{
-	background-image:url('gus_logo.jpg');
+	background-image:url('gus_banner.png');
 	background-position: left top;
 	background-repeat: no-repeat;
 	text-align:right;
 	font-size: 14pt;
-	height: 168px;	
+	height: 200px;	
 	padding-left:255px;
 }
 
@@ -39,16 +56,18 @@ body {
 	text-align: center;
 	vertical-align:text-top; 
 	padding-bottom: 20px;
-	border-top:2px dashed #f6ba2f;
+	border-top: 1px dashed #436188;
 	padding-top: 2px
-	/*Shamelessly ninjaed from http://www.tankedup-imaging.com/css_dev/css-gradient.html*/
 	/*Fall Back Option*/
-	background: white;
+	background: black;
 	/* gecko based browsers */	
 	background: -moz-linear-gradient(top, #fffeed, #fff9ca);
 	/* webkit based browsers */
 	background: -webkit-gradient(linear, left top, left bottom, from(#fffeed), to(#fff9ca));
-	height: auto;
+
+	background-image:url('content_background.png'); 
+	border-left: 1px solid white;
+	border-right: 1px solid white;
 }
 
 #spreader{
@@ -61,30 +80,35 @@ body {
 #content{	
  	float: right; 
 	width:	78%;  
-	border-top: 2px dashed #f6ba2f;
+	border-top: 1px dashed #436188;
 	padding: 10px;
-	background-image:url('content_background.png'); 
+	background-position: right bottom;
+	background-repeat: no-repeat;
+	background-image:url('uistar.png'); 
+	border-left: 1px solid white;
+	border-right: 1px solid white;
 }
 
 #group_column{
 	float: left top; 
 	width: 18%;
-	border-top: 2px dashed #f6ba2f;
+	border-top: 1px dashed #436188;
 	text-align: center;
 	font-family: "Times New Roman";
 	font-size: 14pt;
 	padding-bottom: 10px;
 	background: #fff9ca;
-	
-	/*Shamelessly ninjaed from http://www.tankedup-imaging.com/css_dev/css-gradient.html*/
-	/* gecko based browsers */
-	background: -moz-linear-gradient(top, #fffeed, #fff495);
-
-	/* webkit based browsers */
-	background: -webkit-gradient(linear, left top, left bottom, from(#fffeed), to(#fff495));
-	height: auto;
-
+	background-image:url('content_background.png');
+	border-left: 1px solid white;
+	border-right: 1px solid white; 
 }
+
+/*
+border-top: 2px solid #436188;
+
+
+*/
+
 
 #footer{
 	width: 100%;
@@ -95,7 +119,9 @@ body {
 	font-size: 9px;
 	font-color: #666;
 	background-color:#f5f5f0;
-	padding-top: 2px;
+	padding-top: 20px;
 	border-top: 1px dashed #bcbcbc;
+	border-left: 1px solid white;
+	border-right: 1px solid white;
 }
 
