reoganizational stuff some comments

--- a/guspy/http/VIEWS/base.html
+++ b/guspy/http/VIEWS/base.html
@@ -1,4 +1,6 @@
 <head>
+<link href="/favicon.ico" rel="icon" type="image/x-icon">
+<link REL="SHORTCUT ICON" HREF="/favicon.ico"> 
 <title>{% block title %}Web Title {% endblock %}</title>
 <link href="{{ MEDIA_URL }}css/gus_base.css" type="text/css" media="all" rel="stylesheet" />
 
