--- a/guspy/http/VIEWS/gus_talk/forum.html
+++ b/guspy/http/VIEWS/gus_talk/forum.html
@@ -3,7 +3,7 @@
 {% block site_content %}
 {% load user_extras %}
 <div id="list">
-{% userbar user.user %}
+{% userbar user.user forum.group %}
 <table border="0" width="100%">
     {% for thread in threads %}
         <tr class="title{% if forloop.counter|divisibleby:2 %} even_row{% endif %}" >
