--- a/guspy/http/VIEWS/gus_talk/thread.html
+++ b/guspy/http/VIEWS/gus_talk/thread.html
@@ -2,7 +2,7 @@
 {% block title %}Gus Forums {% endblock %}
 {% block site_content %}
 {% load user_extras %}
-{% userbar user.user %}
+{% userbar user.user group ".thread" %}
 <a href="{% url gus_talk.views.forum thread.forumid %}">Back To Forum</a>
 <div id="list">
     {% for msg in messages %}
