Testing to make sure commit worked

--- a/guspy/http/VIEWS/base.html
+++ b/guspy/http/VIEWS/base.html
@@ -36,8 +36,7 @@
 				<h3>Welcome to <em title="Sharing, Data Management and Collaboration">GUS : </em> <em title="Sharing, Data Management and 
 Collaboration">Groups In A University Setting</em></h3>
 <p>This is an effort of the University of Idaho CS 385 Gus Python Team, to implement Gus a group management web application.  The goal of GUS is to facilitate the 
-dissemination of information to members as well as act as a rectuitment 
-tool.</p>
+disemination of information to members as well as act as a rectuitment tool.</p>
 				{% endblock %}
 			</div>
 		</div>{% endblock %}
