added johns template, plus example in test/welcome and media folder

--- a/views/test/form.html
+++ b/views/test/form.html
@@ -4,5 +4,5 @@
 {{ form.as_p }}
 <input type="submit" value="{{ btnlabel }}">
 </form>
-<a href="{% url gus2.gusTestSuite.views.index %}">Cancel</a><br/>
+<a href="/gus_test/">Cancel</a><br/>
 
