Visible email form

--- a/views/email/index.html
+++ b/views/email/index.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 Hellish world!
- {{listing}}
+<form method="post">
+{% csrf_token %}
+{{ email_form.as_p }}
+<input type="submit" value="send">
+</form>
+
 {% endblock content %}
 
 {% block pagetitle %}
