--- a/views/test/form.html
+++ b/views/test/form.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{%block pagetitle%}GUS:{{title}}{%endblock%}
+{%block content %}
 <h3>{{ title }}</h3>
 <form action="{{ submiturl }}" enctype="{{ enctype }}" method="post">
 {% csrf_token %}
@@ -5,4 +8,4 @@
 <input type="submit" value="{{ btnlabel }}">
 </form>
 <a href="/gus_test/">Cancel</a><br/>
-
+{% endblock %}
