calendar views now display a calendar. Not able to add events yet.

--- a/views/calendar/index.html
+++ b/views/calendar/index.html
@@ -1,24 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
-The Best Calendar Evar.
 
 {% for year, months in years %}
-<h4>{{year}}</h4>
+<h4><center>{{year}}</center></h4>
+<center>
 <table border="1" bordercolor="#FFCC00" style="background-color:#FFFFCC" width="1000" cellpadding="10" cellspacing="3">
      <tr>
 	 {% for month in months %}
         <!--{% if month.current %}"current"{% endif %}-->
         <!--{% if not month.current %}"month"{% endif %}-->
                 <!--{% if month.event %}<b>{% endif %}-->
-				<center>
-                <td><a href="/calendar/view/{{month.name}}/{{year}}/">{{ month.name }}</a></td>
+                <td><a href="/calendar/view/{{month.name}}/{{year}}/"><center>{{ month.name }}</center></a></td>
                 <!--{% if month.event %}</b>{% endif %}<-->
-				</center>
 
 		
        {% endfor %}
 	   </tr>
 	   </table>
+	   </center>
 {% endfor %}
 
 {% endblock content %}
