--- a/views/calendar/month_view.html
+++ b/views/calendar/month_view.html
@@ -1,8 +1,67 @@
 {% extends "base.html" %}
 {% block content %}
-The Best Calendar Evar.
 
-You found {{month}}, {{year}}.
+
+
+<h4>{{month_name}} {{year}}</h4>
+
+{% for year, months in years %}
+<h4><center>{{year}}</center></h4>
+<center>
+<table border="1" bordercolor="#FFCC00" style="background-color:#FFFFCC" width="1000" cellpadding="10" cellspacing="3">
+     <tr>
+   {% for month in months %}
+        <!--{% if month.current %}"current"{% endif %}-->
+        <!--{% if not month.current %}"month"{% endif %}-->
+                <!--{% if month.event %}<b>{% endif %}-->
+                <td><a href="/calendar/view/{{month.name}}/{{year}}/"><center>{{ month.name }}</center></a></td>
+                <!--{% if month.event %}</b>{% endif %}<-->
+
+    
+       {% endfor %}
+     </tr>
+     </table>
+     </center>
+{% endfor %}
+
+
+<div class="month">
+    <table>
+
+    <tr>
+        <td class="empty">Mon</td>
+        <td class="empty">Tue</td>
+        <td class="empty">Wed</td>
+        <td class="empty">Thu</td>
+        <td class="empty">Fri</td>
+        <td class="empty">Sat</td>
+        <td class="empty">Sun</td>
+    </tr>
+
+    {% for week in month_days %}
+        <tr>
+        {% for day, events, current in week %}
+
+            <!-- TD style: empty | day | current; onClick handler and highlight  -->
+            <td class= {% if day == 0 %}"empty"{% endif %}
+            {% if day != 0 and not current %}"day"{% endif %}
+            {% if day != 0 and current %}"current"{% endif %}>
+
+            {% if day != 0 %}
+                {{ day }}
+                {% for event in events %}
+                    <br />
+                    <b>{{ event.event_name }}</b>: {{ event.description }}
+                {% endfor %}
+            {% endif %}
+            </td>
+        {% endfor %}
+        </tr>
+    {% endfor %}
+    </table>
+
+</div>
+
 {% endblock content %}
 
 {% block pagetitle %}
