--- a/views/calendar/index.html
+++ b/views/calendar/index.html
@@ -1,9 +1,6 @@
 <META 
      HTTP-EQUIV="Refresh"
-     CONTENT=".1; URL={% url gus_calendar.views.month_view %} >
-     
-     
- <!--calendar/view/{{current_month}}/{{year}}"> -->
+     CONTENT=".1"; URL="/calendar/{{year}}/{{current_month}}/">
 
 
 
