--- a/views/calendar/month_view.html
+++ b/views/calendar/month_view.html
@@ -64,12 +64,12 @@
              
               {% endif %}
               
-              {% if day != 0%}
+              {% if day != 0 %}
                 {{ day }}
                 {% for event in events %}
-                    <br />
-                    <b>{{ event.event_name }}</b>: {{ event.description }}
-                {% endfor %}
+                    <br>
+                    <b>{{ event.event_name }}</b>
+               {% endfor %}
             {% endif %}
             </td>
         {% endfor %}
