--- a/views/email/index.html
+++ b/views/email/index.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-Hellish world!
 <form method="post">
 {% csrf_token %}
 {{ email_form.as_p }}
-<input type="submit" value="send">
+<input type="submit" value="Send">
 </form>
 
 {% endblock content %}
