some menu stuff

--- a/views/base.html
+++ b/views/base.html
@@ -15,9 +15,9 @@
 				<li><a href="/gus_test/">Manage Groups/Users</a></li>
 				<li><a href="/calendar/">Calendar</a></li>
 				<li><a href="/email/">Email</a></li>
-				<li><a href="http://test.joranbeasley.com/project_management/index.php?m=projects&a=view&project_id=1&tab=0" target="blank">Project Status</a></li>
-				<li><a href="http://test.joranbeasley.com/project_management/">Current Coverage</a></li>
-				<li><a href="https://github.com/arkenflame/gus">GitHub</a></li>
+				<!--><li></li>
+				<li></li>
+				<li></li>-->
 			</ul>
 			{% endblock %}
 			{% block submenu %}
@@ -36,6 +36,11 @@
 				<div class="col2"> 
 					{% block sidebar %}
 					[SIDEBAR(tm)]<br/>...Comming Soon...<hr/>
+					<a href="http://test.joranbeasley.com/project_management/index.php?m=projects&a=view&project_id=1&tab=0" target="blank">Project Status</a><br>
+					<a href="http://test.joranbeasley.com/coverage_report/">Current Coverage</a><br>
+					<a href="http://test.joranbeasley.com/api/">Api Documentation</a>
+					<a href="https://github.com/arkenflame/gus">GitHub</a>
+					
 					{% endblock %}
 				</div> 
 			</div> 
