--- a/views/test/viewUser.html
+++ b/views/test/viewUser.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h3>View : {{usr.username}}'s Details</h3>
-<h4><a href="/email/user/{{usr.id}}/">Email User</a>
+<h4><a href="/email/user/{{usr.id}}/">Email User</a><hr/>
 {% if not roles %}
 not yet a participant in any groups
 {% else %}
