--- a/views/base.html
+++ b/views/base.html
@@ -35,7 +35,7 @@
 				</div> 
 				<div class="col2"> 
 					{% block sidebar %}
-					[SIDEBAR(tm)]<br/>...Comming Soon...<hr/>
+					[SIDEBAR(tm)]<br/>Coming Soon<hr/>
 					<a href="http://test.joranbeasley.com/project_management/index.php?m=projects&a=view&project_id=1&tab=0" target="blank">Project Status</a><br>
 					<a href="http://test.joranbeasley.com/coverage_report/">Current Coverage</a><br>
 					<a href="http://test.joranbeasley.com/api/">Api Documentation</a><br>
