--- a/views/groups/manageRole.html
+++ b/views/groups/manageRole.html
@@ -1,12 +1,15 @@
-<h2>Manage Role</h2>
-<strong>{{ role }}</strong><hr />
+{% extends "base.html" %}
+{% block content %}
+<a href="/gus_test/Group/Edit/{{role.group.id}}">Back To Group Manager</a><br/>
+<a href="/gus_test/Role/EditPerms/{{role.id}}">Edit Role Permissions</a>
+<h2>Edit Role {{ role.name }} [{{ role.group.group_name }}]</h2>
 <h3>Users</h3>
 {% for user in role.users.all %}
 {{user}} [
-<a href="{% url gus2.gusTestSuite.views.removeUserFromRole  role.id user.id %}">
+<a href="/gus_test/Role/{{role.id}}/RemoveUser/{{user.id}}">
 Remove User From Role
 </a>
 ]<br />
 {% endfor %}
 
-
+{% endblock %}
