--- a/views/groups/manageGroup.html
+++ b/views/groups/manageGroup.html
@@ -16,6 +16,7 @@
 {% endfor %}
 
 <div style="border:thin red solid;margin:50px;padding:25px">
+	<a href="/gus_test/Role/New/{{group.id}}/">Create A New Role</a>
 <form method="post" >
 <fieldset><legend>Add User to Group</legend>
 {{ formAddUser.as_p }}
