--- a/views/gallery/index.html
+++ b/views/gallery/index.html
@@ -2,11 +2,17 @@
 
 {% if groups == None %}<b>You aren't a member of any groups!</b> {% endif %}
 
-<!-- Print a list of the groups that the user belongs to -->
+<!-- Print a list of the groups that the user belongs to, and each of the galleries for each group -->
 {% for g in groups.all %}
 <h2>{{g.name}}</h2>
 
-<!-- TODO: For each of the galleries we have to implement a custom templatetag that calls the gus_gallery.utils.get_group_galleries -->
+{% for gal in galleries.all %}
 
+{% if gal.group == g %}
+<a href="#">{{gal.name}}</a><br/>
+{% endif %}
+
+{% endfor %}
+<a href="#">Create New Gallery</a><br/>
 <br/><br/>
 {% endfor %}
