finally fixed the stupid duplicating month bar

--- a/views/calendar/month_view.html
+++ b/views/calendar/month_view.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 {% for year, months in years %}
-<h4><center>{{current_month_name}}{{month_name}} {{year}}</center></h4>
+<h4><center>{{month_name}} {{year}}</center></h4>
 <center>
 <table border="1" bordercolor="#42647F" style="background-color:#C1CDCD" width="600" cellpadding="10" cellspacing="3">
      <tr>
